--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 										<p>PhD - The University of Texas at Austin - 2021</p>
 										<p>MS - The University of Nevada, Las Vegas - 2014</p>
 										<p>BS - The University of Georgia - 2009</p>
-										<a href="#" class="special">Experience</a>
+										<a href="#" class="special">Back to top</a>
 									</div>
 								</div>
 							</section>
@@ -75,7 +75,7 @@
 										<p>Graduate Research Assistant, 2015 - 2021</p>
 										<p>Exploration Geoscience Intern, Summer 2020</p>
 										<p>Exploration Geoscience Intern, Summer 2019</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="#" class="special">Back to top</a>
 									</div>
 								</div>
 							</section>
@@ -85,9 +85,9 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">Skills</h2>
+										<p>Geology, etc...</p>
+										<a href="#" class="special">Back to top</a>
 									</div>
 								</div>
 							</section>
@@ -95,8 +95,8 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<h2 class="major">Projects</h2>
+									<p>I have worked on a variety of projects.</p>
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
