--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 					<section id="banner">
 						<div class="inner">
 							<!-- <div class="logo"><span class="icon fa-gem"></span></div> -->
-							<a href="#" class="image"><img src="images/001kvnfc.jpg" alt="" /></a>
+							<a href="#" class="image"><img src="images/001kvnfc.jpg" 
+								width="200"
+								/></a>
 							<h2>Kevin Meazell</h2>
 							<p>PhD Geoscientist</p>
 						</div>
