--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
 									<div class="content">
 										<h2 class="major">Education</h2>
 										<p>PhD - The University of Texas at Austin - 2021</p>
+										<ul>
+											<li>Dolor pulvinar etiam.</li>
+											<li>Sagittis adipiscing.</li>
+											<li>Felis enim feugiat.</li>
+										</ul>
 										<p>MS - The University of Nevada, Las Vegas - 2014</p>
 										<p>BS - The University of Georgia - 2009</p>
 										<a href="#" class="special">Back to top</a>
