--- a/index.html
+++ b/index.html
@@ -61,11 +61,10 @@
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Education</h2>
-										<p>PhD - The University of Texas at Austin - 2021</p>
+										<p>PhD - Geology - 2021</p>
 										<ul>
-											<li>Dolor pulvinar etiam.</li>
-											<li>Sagittis adipiscing.</li>
-											<li>Felis enim feugiat.</li>
+											<li>The University of Texas at Austin</li>
+											<li>Dissertation: Deepwater gas hydrate reservoirs of the northern Gulf of Mexico: Characterization and Consequences.</li>
 										</ul>
 										<p>MS - The University of Nevada, Las Vegas - 2014</p>
 										<p>BS - The University of Georgia - 2009</p>
