--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 										<p>PhD - Geology - 2021</p>
 										<ul>
 											<li>The University of Texas at Austin</li>
-											<li>Dissertation: Deepwater gas hydrate reservoirs of the northern Gulf of Mexico: Characterization and Consequences.</li>
+											<li>Dissertation: Deepwater Gas Hydrate Reservoirs of the Northern Gulf of Mexico: Characterization and Consequences.</li>
 										</ul>
 										<p>MS - The University of Nevada, Las Vegas - 2014</p>
 										<p>BS - The University of Georgia - 2009</p>
