--- a/index.html
+++ b/index.html
@@ -58,16 +58,23 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style2">
 								<div class="inner">
-									<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Education</h2>
-										<p>PhD - Geology - 2021</p>
+										<!-- <p>PhD - Geology - 2021</p>
 										<ul>
 											<li>The University of Texas at Austin</li>
 											<li>Dissertation: Deepwater Gas Hydrate Reservoirs of the Northern Gulf of Mexico: Characterization and Consequences.</li>
 										</ul>
 										<p>MS - The University of Nevada, Las Vegas - 2014</p>
-										<p>BS - The University of Georgia - 2009</p>
+										<p>BS - The University of Georgia - 2009</p> -->
+										<ul>
+											<li>PhD - Geology - 2021</li>
+											<li>MSc - Geoscience - 2014</li>
+											<li>BSc - Geology - 2009</li>
+										</ul>
+
+
 										<a href="#" class="special">Back to top</a>
 									</div>
 								</div>
