--- a/index.html
+++ b/index.html
@@ -70,8 +70,19 @@
 										<p>BS - The University of Georgia - 2009</p> -->
 										<ul>
 											<li>PhD - Geology - 2021</li>
+												<ul>
+													<li>The University of Texas at Austin</li>
+													<li>Dissertation: Gas Hydrate Reservoirs of the Northern Gulf of Mexico: Characterization and Consequences</li>
+												</ul>
 											<li>MSc - Geoscience - 2014</li>
+											<ul>
+												<li>The University of Nevada, Las Vegas</li>
+												<li>Thesis: Porphyry Copper Exploration of the Hualapai Mountains, Western Arizona: A Mulitfacted Approach</li>
+											</ul>
 											<li>BSc - Geology - 2009</li>
+											<ul>
+												<li>The University of Georgia</li>
+											</ul>
 										</ul>
 
 
