small change, what next?

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 				<header>
 					<span class="image avatar"><img src="images/001kvnfc.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Kevin Meazell, PhD</a></h1>
-					<p>I am a geoscientist<br />
-					with many interests</p>
+					<p>Geoscientist
+					</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -60,7 +60,7 @@
 												<li>MS., The University of Nevada, Las Vegas - 2014</li>
 												<li>BS., The University of Georgia - 2009</li>
 											</ul>
-											What comes next?
+											<!-- What comes next? -->
 										</p>
 									</header>
 									
